namespace java com.heepay.manage.rpc.service


struct MerchantThrift {
        1:string userId,
        2:string name,
        3:string email,
        4:string companyName,
        5:string legalRepresentative,
        6:string companyPhone,
        7:string legalMobile,
        8:string website,
        9:string businessAddress,
        10:string contryCode,
        11:string contryName,
        12:string provinceCode,
        13:string provinceName,
        14:string cityCode,
        15:string cityName,
        16:string countyCode,
        17:string countyName,
        18:string contactAddress,
        19:string contactor,
        20:string type,
        21:string level,
        22:string chargeType,
        23:string requestWays,
        24:string requestVersion,
        25:string allowedIps,
        26:string signedType,
        27:string status,
        28:string opAuditTime,
        29:string opAuditor,
        30:string rcAuditStatus,
        31:string rcAuditTime,
        32:string rcAuditor,
        33:string legalAuditStatus,
        34:string legalAuditTime,
        35:string legalAuditor,
        36:string salesId,
        37:string inchargerId,
        38:string remark,
        39:string createTime,
        40:string welcomeMessage,
        41:string certificateType,
        42:string businessLicenseEndTime,
        43:string organizationCode,
        44:string taxRegistrationCertificateNo,
        45:string businessScope,
        46:string legalIdcard,
        47:string legalCertificateEndTime,
        48:string contactorIdcardNo,
        49:string contactorCertificateEndTime,
        50:string contactorPhone,
        51:string ipcNo,
        52:string permitsAccounts,
        53:string legalCertificateFront,
        54:string legalCertificateBack,
        55:string taxRegistrationCertificate,
        56:string organizationCodeCertificate,
        57:string businessLicenseFile,
        58:string businessLicenseNo,
        59:string objection,
        60:string retainedAmount,
        61:string unionPayProvinceCode,
        62:string unionPayProvinceName,
        63:string unionPayCityCode,
        64:string unionPayCityName,
        65:string mccType,
        66:string mccServer,
        67:string mccDetail,
        68:string industryCategory,
        69:string lastLoginDate,
        70:string contactorCertificateFront,
        71:string contactorCertificateBack,
        72:string shortName, //商户简称
        73:string authorizationLetter
}

service MerchantService {
        MerchantThrift get(1:string merchantId),
        string insert(1:MerchantThrift arg0),
        string update(1:MerchantThrift arg0),
        string queryBossId(1:MerchantThrift merchantThrift),
        string changeLegalAuditStatus(1:string merchantId),
        list<MerchantThrift> findList(1:MerchantThrift arg0)
}